Driver not updating when using Single From Driver #48734

Closed
opened 2016-06-25 22:45:53 +02:00 by Jason schleifer · 11 comments

System Information
OS X

Blender Version
2.77.1 2016-06-24 Hash: 823ab66

Short description of error
When I try and drive one attribute with another using the single from driver option, it doesn't update.

Exact steps for others to reproduce the error
Select a cube.
RMB over sy in panel
choose Add->Single From Driver
Click on sx
Drag on sx to adjust the value -- nothing happens.

driverNotUpdating.gif

**System Information** OS X **Blender Version** 2.77.1 2016-06-24 Hash: 823ab66 **Short description of error** When I try and drive one attribute with another using the single from driver option, it doesn't update. **Exact steps for others to reproduce the error** Select a cube. RMB over sy in panel choose Add->Single From Driver Click on sx Drag on sx to adjust the value -- nothing happens. ![driverNotUpdating.gif](https://archive.blender.org/developer/F318650/driverNotUpdating.gif)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JasonSchleifer

Added subscriber: @JasonSchleifer

Added subscriber: @EjnerFergo

Added subscriber: @EjnerFergo

Hi, do you have "Auto Run Python Python Scripts" on? (User Preferences -> File) It needs to be on for it to work.
Tested with build from yesterday (on Linux FWIW).

Hi, do you have "Auto Run Python Python Scripts" on? (User Preferences -> File) It needs to be on for it to work. Tested with build from yesterday (on Linux FWIW).
Author
Member

Yep, I always have auto run python scripts on.. this build is from the 24th on os x

Yep, I always have auto run python scripts on.. this build is from the 24th on os x

Hmm ok, could be a platform specific bug.. sorry I can't help further.

Hmm ok, could be a platform specific bug.. sorry I can't help further.
Author
Member

Ah! I was running with --enable-new-depsgraph on.. if I just run w/out that, it runs just fine.

Seems like a depsgraph bug then.

Ah! I was running with --enable-new-depsgraph on.. if I just run w/out that, it runs just fine. Seems like a depsgraph bug then.
Sergey Sharybin was assigned by Campbell Barton 2016-06-27 04:59:05 +02:00

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

Is it still broken after fix from @JoshuaLeung? If so, what are the exact issue? (builds from builder.blender.org an be used to test Joshua's fix).

Is it still broken after fix from @JoshuaLeung? If so, what are the exact issue? (builds from builder.blender.org an be used to test Joshua's fix).

This issue was referenced by 029de800a4

This issue was referenced by 029de800a4cfdaef3f3e01277482baeaf57a5f89

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48734
No description provided.