Fix T48734: Driver not updating when using Single From Driver within same object